# main-server/src/http_server/routes/v7/ndid.js
@@ -901,4 +901,24 @@ router.post(
   }
 );
 
+router.post('/allow_your_data_service_to_be_mixed_in_request', async (req, res, next) => {
+  try {
+    await ndid.allowYourDataServiceToBeMixedInRequest();
+    res.status(204).end();
+    next();
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.post('/disallow_your_data_service_to_be_mixed_in_request', async (req, res, next) => {
+  try {
+    await ndid.disallowYourDataServiceToBeMixedInRequest();
+    res.status(204).end();
+    next();
+  } catch (error) {
+    next(error);
+  }
+});
+
 export default router;
